Only store modified columns widths after the mouse button was released

This prevents that the new widths are written to disk multiple times in
quick succession, which can make column resizing quite slow.

BUG: 351846
REVIEW: 351846
FIXED-IN: 15.08.1