src/kitemviews/kitemlistheader.h
@@ -79,6 +79,13 @@ signals:
                             qreal currentWidth,
                             qreal previousWidth);
 
+    /**
+     * Is emitted if the user has released the mouse button after adjusting the
+     * width of a visible role.
+     */
+    void columnWidthChangeFinished(const QByteArray& role,
+                                   qreal currentWidth);
+
 private:
     KItemListHeader(KItemListView* listView);
 
